# ipad_code

./: README.md  a.out  known_hosts
Concurrency/: main.py
Dreams/: default.py
Playground/: Kata.cpp  degub.txt  main.cpp  real_estate_ml.py
Playground/C/: main.c
Playground/C++/: CMakeLists.txt
Playground/C++/src/: main.cpp
Playground/Python/: default.py
Playground/Python/test_driven_development/: a.out
TestDrivenDevelopment/: mycode.py
TestDrivenDevelopment/TestExamples/: mytests.py
Website/: default.js  package.json
financial_python/: README.md  file.csv  main.py  mainEU.py
stepik/Python/functions/: matrix_matrix.py
